# SpatialMixer

./: .gitignore  CMakeLists.txt  SpatialMixer.jucer
Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/SpatialMixer.xcodeproj/: project.pbxproj
Source/: CanvasComponent.cpp  CanvasComponent.h  DSPEngine.cpp  DSPEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedMixerState.cpp  SharedMixerState.h  SpectrumComponent.cpp  SpectrumComponent.h  TrackState.h
